# jack-compiler

./: .gitignore  LICENSE  README.md  pyproject.toml  testT.xml
jack_analyzer/: JackAnalyzer.py  cli.py  comment_handler.py  compilation_engine.py  constants.py  exceptions.py  parser.py  token_writer.py  tokenizer.py
jack_analyzer/tests/: test_comment_handler.py  test_engine.py  test_remove_comments.py  test_tokenizing.py
jack_compiler/: JackAnalyzer.py  cli.py  comment_handler.py  compilation_engine.py  compilation_engine_xml.py  constants.py  exceptions.py  symbol_table.py  tokenizer.py  vm_writer.py
jack_compiler/tests/: test_comment_handler.py  test_engine.py  test_symbol_table.py
